Startet på skip.html, la til ny bildemappe

--- a/WebProsjekt/WB Prosjekt/skip.html
+++ b/WebProsjekt/WB Prosjekt/skip.html
@@ -70,12 +70,31 @@
 
             <div class="content-left col-md-8">
                 <div class="page-header">
-                    <h2>Velkommen til Cruisetastic <small> - Ledende innen cruisereiser</small></h2>
+                    <h2>Våre skip <small> - Alt du trenger å vite</small></h2>
                 </div>
-                <p>
-                    Her kan du finne informasjon om vårt store og diverse utvalg av cruisereiser.
-                    Du kan også bestille reiser under "Bestill reise" i menyen over!
-                </p>
+
+                <br />
+
+                <div>
+                    <h3>Cruisetastic Luxury</h3>
+                    <img src="img/skip/coolship.png" alt="Vårt største og kuleste cruiseskip." width="566" height="379"/>
+                    <p><i>Cruisetastic Luxury</i> er vårt største og mest luxuriøse cruiseskip, og rommer opp til 5000 passasjerer på en gang. Du finner mange ulike fasiliteter fordelt på fem etasjer, blant annet en casino, tre forskjellige restauranter, diverse butikker, og til og med et basseng på terrassen på toppen.</p>
+                </div>
+                <div>
+                    <h3>Cruisetastic DreamRaft</h3>
+                    <img src="img/skip/raft.jpg" alt="Rolig cruiseskip med mulighet for fisking." width="566" height="378" />
+                    <p>Hvis du ønsker å komme nærmere naturen så er <i>Cruisetastic DreamRaft</i> skipet for deg. Dette cruiseskipet er lagd av helt naturlige materialer, og takket være manglende vegger og tak kan du interagere direkte med det marine dyrelivet. Dette gir dessuten flotte muligheter for fisking, noe som ingen andre cruiseselskap tilbyr.</p>
+                </div>
+                <div>
+                    <h3>Cruisetastic RowFlow</h3>
+                    <img src="img/skip/robåt.jpg" alt="Perfekt for hele familien." width="566" height="425" />
+                    <p> <i>Cruisetastic DreamRaft</i> skipet for deg. Dette cruiseskipet er lagd av helt naturlige materialer, og takket være manglende vegger og tak kan du interagere direkte med det marine dyrelivet. Dette gir dessuten flotte muligheter for fisking, noe som ingen andre cruiseselskap tilbyr.</p>
+                </div>
+                <div>
+                    <h3>Cruisetastic NoPanic</h3>
+                    <img src="img/skip/titanic.jpg" alt="Perfekt for hele familien." width="566" height="425" />
+                    <p> <i>Cruisetastic DreamRaft</i> skipet for deg. Dette cruiseskipet er lagd av helt naturlige materialer, og takket være manglende vegger og tak kan du interagere direkte med det marine dyrelivet. Dette gir dessuten flotte muligheter for fisking, noe som ingen andre cruiseselskap tilbyr.</p>
+                </div>
             </div>
 
             <div class="content-right col-md-4">
