--- a/WebProsjekt/WB Prosjekt/old_shit/reise.html
+++ b/WebProsjekt/WB Prosjekt/old_shit/reise.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en">
     <head>
@@ -12,7 +12,7 @@
         <div class="imghead"><br><p>Cruisetastic</p></div>
         <div class="container spacer">
         <ul class="nav nav-tabs">
-            <li role="presentation"><a href="index.html">Hjemme</a></li>
+        
             <li role="presentation" class="active"><a href="reise.html">Bestill reise</a></li>
             <li role="presentation"><a href="tilbud.html">Tilbud</a></li>
             <li role="presentation"><a href="skip.html">Våre skip</a></li>
