--- a/WebProsjekt/WB Prosjekt/skip.html
+++ b/WebProsjekt/WB Prosjekt/skip.html
@@ -21,20 +21,18 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Cruisetastic</a>
+                    <a class="navbar-brand" href="index.html">Cruisetastic</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Hjem</a></li>
+                        <li><a href="index.html">Hjem</a></li>
                         <li><a href="dest.html">Destinasjoner</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
                         <li><a href="reise.html">Reise</a></li>
-                        <li><a href="skip.html">Skip</a></li>
+                        <li class="active"><a href="skip.html">Skip</a></li>
                         <li><a href="tilbud.html">Tilbud</a></li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="./">Logg inn<span class="sr-only">loginn</span></a></li>
-                    </ul>
+                
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
