--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -76,15 +76,34 @@
                 <h3>
                     Cruise i Karibia
                     <br />
-                    <small>12 dagers intens cruising for alle aldersgrupper.</small>
-                    <a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <small>3 ukers cruise til Karibia</small>
+                    <br />
+                    <small>Nyt 3 fantastiske uker fra kun <large>25 495,-</large></small>
+                    <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseKaribia" aria-expanded="false" aria-controls="collapseExample">
                         Les mere her.
                     </a>
                 </h3>
 
-                <div class="collapse" id="collapseExample">
+                <div class="collapse" id="collapseKaribia">
                     <div class="well">
-                        trolololololololololo
+                        <h4>
+                            <small>
+                                Cruise i Karibia er en perfekt reiseform hvis du vil oppleve så mye som mulig i ferien din.
+                                Karibia er akkurat så eksotisk som man forestiller seg – vaiende palmer, fengende rytmer,
+                                turkisblått hav, fascinerende øyer, smilende mennesker og spennende reisemål. Og ikke minst sol,
+                                badeliv og lange paradisstrender. Her har du med andre ord alle muligheter til både avslapning og eventyr.
+                            </small>
+                            <small>
+                                Velger du å reise på cruise i Karibia er dette den perfekte ferien for deg som pensjonist.
+                                Velg det cruiset som passer deg best. Med vår praktiske pakkeløsninger får du alt servert – fly,
+                                hotellovernattinger og cruise. I Karibia har vi et stort utvalg av ruter,
+                                og her kan du velge mellom noen av våre største cuiseskip, Cruisetastic Luxury eller Cruisetastic NoPanic.
+                            </small>
+                            <small>
+                                Vi besøker flere spennende havner og øyer som for eksempel Jamaica, Puerto Rico,
+                                St. Martin/St. Maarten og Bahamas.
+                            </small>
+                        </h4>
                     </div>
                 </div>
 
@@ -94,37 +113,96 @@
 
             <div class="page-header">
                 <h3>
-                    Cruise Dubai<small>
-                        Vil du ha en kombinasjon av komfortabelt liv på havet og nye og annerledes opplevelser?
-                        Velg vårt cruise i Persiabukten og opplev omgivelser som hentet ut av "Tusen og én natt"!
-                        Vings cruise i Persiabukten tar deg til Dubai, Abu Dhabi, Muscat og Khasab,
-                        det ene reisemålet mer spektakulært enn det andre.
-                        Muscat, hovedstaden i sultanmakten Oman tilbyr et stort utvalg av severdigheter,
-                        strender og markeder, og Dubai er en herlig blanding av tradisjon og overdådig luksus.
-                        Her finnes innendørs skianlegg, tradisjonelle markeder, fantastiske hotell og verdens
-                        høyeste bygning, Burj Khalifa, blant mye, mye annet.
-
-                        Med Vings enkle pakkeløsninger får du alt servert – fly, hotellovernatting i avreisebyen
-                        og cruise. Reis på cruise med Royal Caribbean Internationals store og familievennlige
-                        skip eller et av Costa Cruises familievennlige og prisbelønte skip og nyt god mat og
-                        aktiviteter om bord. Reiser du med Royal Caribbean International eller Celebrity Cruises
-                        er tips inkludert i pakkeprisen, ca. 12 USD/dag.
-                        Reiser du med Costa Cruises blir den daglige obligatoriske tipsen på ca. 9 euro pr. voksen
-                        og 4,50 euro pr. barn lagt til prisen. Pristillegget betales om bord.
-                    </small>
+                    Cruise i Dubai
+                    <br />
+                    <small>2 ukers cruise til Dubai</small>
+                    <br />
+                    <small>Nyt 2 fantastiske uker fra kun <large>13 995,-</large></small>
+                    <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseDubai" aria-expanded="false" aria-controls="collapseExample">
+                        Les mere her.
+                    </a>
                 </h3>
+
+                <div class="collapse" id="collapseDubai">
+                    <div class="well">
+                        <h4>
+                            <small>
+                                Vil du ha en kombinasjon av komfortabelt liv på havet og nye og annerledes opplevelser?
+                                Velg vårt cruise i Persiabukten og opplev omgivelser som hentet ut av "Tusen og én natt"!
+                                Vings cruise i Persiabukten tar deg til Dubai, Abu Dhabi, Muscat og Khasab,
+                                det ene reisemålet mer spektakulært enn det andre.
+                                Muscat, hovedstaden i sultanmakten Oman tilbyr et stort utvalg av severdigheter,
+                                strender og markeder, og Dubai er en herlig blanding av tradisjon og overdådig luksus.
+                                Her finnes innendørs skianlegg, tradisjonelle markeder, fantastiske hotell og verdens
+                                høyeste bygning, Burj Khalifa, blant mye, mye annet.
+                            </small>
+                        </h4>
+                    </div>
+                </div>
             </div>
 
-            <img src="img/dubai.jpg" width="566" height="353" alt="..." class="img-rounded">
+            <img src="img/middelhavet.jpg" width="566" height="353" alt="..." class="img-rounded">
 
             <div class="page-header">
-                <small>Lorem ipsum carribien kålrabi penis</small>
+                <h3>
+                    Cruise i Middelhavet
+                    <br />
+                    <small>4 ukers cruise til Dubai</small>
+                    <br />
+                    <small>Nyt 4 fantastiske uker fra kun <large>35 795,-</large></small>
+                    <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseMiddel" aria-expanded="false" aria-controls="collapseExample">
+                        Les mere her.
+                    </a>
+                </h3>
+
+                <div class="collapse" id="collapseMiddel">
+                    <div class="well">
+                        <h4>
+                            <small>
+                                Vil du ha en kombinasjon av komfortabelt liv på havet og nye og annerledes opplevelser?
+                                Velg vårt cruise i Persiabukten og opplev omgivelser som hentet ut av "Tusen og én natt"!
+                                Vings cruise i Persiabukten tar deg til Dubai, Abu Dhabi, Muscat og Khasab,
+                                det ene reisemålet mer spektakulært enn det andre.
+                                Muscat, hovedstaden i sultanmakten Oman tilbyr et stort utvalg av severdigheter,
+                                strender og markeder, og Dubai er en herlig blanding av tradisjon og overdådig luksus.
+                                Her finnes innendørs skianlegg, tradisjonelle markeder, fantastiske hotell og verdens
+                                høyeste bygning, Burj Khalifa, blant mye, mye annet.
+                            </small>
+                        </h4>
+                    </div>
+                </div>
             </div>
 
             <img src="img/carribien.jpg" alt="..." class="img-rounded">
 
             <div class="page-header">
-                <small>Lorem ipsum carribien kålrabi penis</small>
+                <h3>
+                    Cruise i det Indiske hav
+                    <br />
+                    <small>2 ukers cruise i det Indiske hav</small>
+                    <br />
+                    <small>Nyt 2 fantastiske uker fra kun <large>29 795,-</large></small>
+                    <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseIndisk" aria-expanded="false" aria-controls="collapseExample">
+                        Les mere her.
+                    </a>
+                </h3>
+
+                <div class="collapse" id="collapseIndisk">
+                    <div class="well">
+                        <h4>
+                            <small>
+                                Vil du ha en kombinasjon av komfortabelt liv på havet og nye og annerledes opplevelser?
+                                Velg vårt cruise i Persiabukten og opplev omgivelser som hentet ut av "Tusen og én natt"!
+                                Vings cruise i Persiabukten tar deg til Dubai, Abu Dhabi, Muscat og Khasab,
+                                det ene reisemålet mer spektakulært enn det andre.
+                                Muscat, hovedstaden i sultanmakten Oman tilbyr et stort utvalg av severdigheter,
+                                strender og markeder, og Dubai er en herlig blanding av tradisjon og overdådig luksus.
+                                Her finnes innendørs skianlegg, tradisjonelle markeder, fantastiske hotell og verdens
+                                høyeste bygning, Burj Khalifa, blant mye, mye annet.
+                            </small>
+                        </h4>
+                    </div>
+                </div>
             </div>
 
 
@@ -136,7 +214,7 @@
                 <div class="page-header">
                     <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
                 </div>
-                <ul>
+                <ul class="list-group">
                     <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
                     <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
                     <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
