--- a/WebProsjekt/WB Prosjekt/skip.html
+++ b/WebProsjekt/WB Prosjekt/skip.html
@@ -25,10 +25,9 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Hjem</a></li>
                         <li><a href="dest.html">Destinasjoner</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
-                        <li><a href="reise.html">Reise</a></li>
+                        <li><a href="reise.html">Bestill reise</a></li>
                         <li class="active"><a href="skip.html">Skip</a></li>
                         <li><a href="tilbud.html">Tilbud</a></li>
                     </ul>
@@ -36,28 +35,23 @@
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
-
         <div id="captioned-gallery">
             <figure class="slider">
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img1</figcaption>
+                    <img src="img/carribien_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 3-ukers på Karribien</figcaption>
                 </figure>
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img2</figcaption>
+                    <img src="img/dubai_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 2-ukers på cruise i Dubai</figcaption>
                 </figure>
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img3</figcaption>
+                    <img src="img/indian_ocean_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 2-ukers i det indiske hav</figcaption>
                 </figure>
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img4</figcaption>
-                </figure>
-                <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img5</figcaption>
+                    <img src="img/mediteranien_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 4-ukers i middelhavet</figcaption>
                 </figure>
             </figure>
         </div>
