--- a/WebProsjekt/WB Prosjekt/tilbud.html
+++ b/WebProsjekt/WB Prosjekt/tilbud.html
@@ -40,24 +40,20 @@
         <div id="captioned-gallery">
             <figure class="slider">
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img1</figcaption>
+                    <img src="img/carribien_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 3-ukers på Karribien</figcaption>
                 </figure>
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img2</figcaption>
+                    <img src="img/dubai_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 2-ukers på cruise i Dubai</figcaption>
                 </figure>
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img3</figcaption>
+                    <img src="img/indian_ocean_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 2-ukers i det indiske hav</figcaption>
                 </figure>
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img4</figcaption>
-                </figure>
-                <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img5</figcaption>
+                    <img src="img/mediteranien_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 4-ukers i middelhavet</figcaption>
                 </figure>
             </figure>
         </div>
@@ -70,21 +66,28 @@
                 <div class="page-header">
                     <h2>Våre tilbud <small> - reiser for litt mindre</small></h2>
                 </div>
-                <p>
-                    Våre tilbud gir deg gode opplevelser for litt mindre penger
 
-
-                </p>
+                <h2>
+                    <small>
+                        Våre tilbud gir deg gode opplevelser for litt mindre penger
+                    </small>
+                </h2>
                 <img src="img/carribien.jpg" alt="..." class="img-rounded">
-                <p>For 13 497,- kommer du på 14 dagerscruise til karibien</p>
-            </div>
+                <a href="supertilbud.html">
+                    <p class="salg">For 13 497,- kommer du på 14 dagerscruise til karibien</p>
+                </a>
+                <br /><br />
+                <img src="img/indian.jpg" alt="..." class="img-rounded" height="353" width="566">
+                <a href="supertilbud.html"><p class="salg">For 22 997,- kommer du på 10 dagerscruise til det indiske hav</p>
+             </a>
+        </div>
 
             <div class="content-right col-md-4">
                 <!--Legg til siste nytt for siden-->
                 <div class="page-header">
                     <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
                 </div>
-                <ul>
+                <ul class="list-group">
                     <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
                     <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
                     <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
