--- a/WebProsjekt/WB Prosjekt/kontakt.html
+++ b/WebProsjekt/WB Prosjekt/kontakt.html
@@ -39,24 +39,20 @@
         <div id="captioned-gallery">
             <figure class="slider">
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img1</figcaption>
+                    <img src="img/carribien_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 3-ukers på Karribien</figcaption>
                 </figure>
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img2</figcaption>
+                    <img src="img/dubai_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 2-ukers på cruise i Dubai</figcaption>
                 </figure>
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img3</figcaption>
+                    <img src="img/indian_ocean_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 2-ukers i det indiske hav</figcaption>
                 </figure>
                 <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img4</figcaption>
-                </figure>
-                <figure>
-                    <img src="http://www.atkinsglobal.com/~/media/Images/A/Atkins-Corporate/projects/header-banner/oasis.jpg" alt="">
-                    <figcaption>img5</figcaption>
+                    <img src="img/mediteranien_head.jpg" alt="">
+                    <figcaption>Nyt en fantastisk 4-ukers i middelhavet</figcaption>
                 </figure>
             </figure>
         </div>
