--- a/WebProsjekt/WB Prosjekt/reise.html
+++ b/WebProsjekt/WB Prosjekt/reise.html
@@ -72,14 +72,12 @@
                        <div class="element-email"><label class="title">Email<span class="required">*</span></label><input class="large" type="email" name="email" value="" required="required" /></div>
                        <div class="element-phone"><label class="title">Telefon<span class="required">*</span></label><input class="large" type="tel" pattern="[+]?[\.\s\-\(\)\*\#0-9]{3,}" maxlength="24" name="phone" required="required" value="" /></div>
                        <div class="element-date"><label class="title">Fødselsdato<span class="required">*</span></label><input class="large" data-format="yyyy-mm-dd" type="date" name="date2" required="required" placeholder="yyyy-mm-dd" /></div>
-                       <div class="element-date"><label class="title">Avreise<span class="required">*</span></label><input class="medium" data-format="yyyy-mm-dd" type="date" name="date" required="required" placeholder="yyyy-mm-dd" /></div>
-                       <div class="element-date"><label class="title">Hjemmereise<span class="required">*</span></label><input class="medium" data-format="yyyy-mm-dd" type="date" name="date1" required="required" placeholder="yyyy-mm-dd" /></div>
                        <div class="element-select">
                            <label class="title">Destinasjon<span class="required">*</span></label><div class="large">
                                <span>
                                    <select name="select" required="required">
 
-                                       <option value="Karibien">Karibien</option>
+                                       <option value="Karibien">Karibien - 21 dager - 10.02.2016 til 02.03.2016</option>
                                        <option value="Middelhavet ">Middelhavet </option>
                                        <option value="Dubai">Dubai</option>
                                        <option value="Indiske Hav">Indiske Hav</option>
