--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -143,7 +143,7 @@
                 <h3>
                     Cruise i Middelhavet
                     <br />
-                    <small>4 ukers cruise til Dubai</small>
+                    <small>4 ukers cruise til Middelhavet</small>
                     <br />
                     <small>Nyt 4 fantastiske uker fra kun <large>35 795,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseMiddel" aria-expanded="false" aria-controls="collapseExample">
