--- a/WebProsjekt/WB Prosjekt/reise.html
+++ b/WebProsjekt/WB Prosjekt/reise.html
@@ -77,10 +77,10 @@
                                <span>
                                    <select name="select" required="required">
 
-                                       <option value="Karibien">Karibien - 21 dager - 10.02.2016 til 02.03.2016</option>
-                                       <option value="Middelhavet ">Middelhavet </option>
-                                       <option value="Dubai">Dubai</option>
-                                       <option value="Indiske Hav">Indiske Hav</option>
+                                       <option value="Karibien">Karibien - 3 uker - 10.02.2016 til 02.03.2016</option>
+                                       <option value="Middelhavet ">Middelhavet - 4 uker - 06.02.2016 til 27.02.2016 </option>
+                                       <option value="Dubai">Dubai - 2 uker - 03.03.2016 til 17.03.206</option>
+                                       <option value="Indiske Hav">Indiske Hav - 2 uker - 10.03.2016 til 24.03.2016</option>
                                    </select><i></i>
                                </span>
                            </div>
