--- a/WebProsjekt/WB Prosjekt/kontakt.html
+++ b/WebProsjekt/WB Prosjekt/kontakt.html
@@ -68,7 +68,7 @@
                 <p>
                     <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 815 493 00 (Hverdager: 09.00 - 17.00)
                     <br /> <br />
-                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> cruisetastic@cruise.no
+                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> cruisetastic@mrfs.me
                     <br /><br />
                     <br />
                     <img src="img/kaptein.jpg" height="25%" width="25%" class="img-rounded" />
