--- a/WebProsjekt/WB Prosjekt/index.html
+++ b/WebProsjekt/WB Prosjekt/index.html
@@ -115,9 +115,9 @@
                 <!-- List group -->
                 <ul class="list-group">
                     <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
-                    <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
+                    <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Dubai</li>
                     <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
-                </ul>
+                    <li class="list-group-item">09/09/15 Cruise NoPanic fullførte nok et cruise!</li>                </ul>
             </div>
 
         </div>
