--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -212,8 +212,9 @@
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
-                    <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Barbados</li>
+                    <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Dubai</li>
                     <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
+                    <li class="list-group-item">09/09/15 Cruise NoPanic fullførte nok et cruise!</li>
                 </ul>
             </div>
 
