--- a/WebProsjekt/WB Prosjekt/skip.html
+++ b/WebProsjekt/WB Prosjekt/skip.html
@@ -72,6 +72,15 @@
                     <img src="img/skip/coolship.png" alt="Vårt største og kuleste cruiseskip." width="566" height="379"/>
                     <p><i>Cruisetastic Luxury</i> er vårt største og mest luxuriøse cruiseskip, og rommer opp til 5000 passasjerer på en gang. Du finner mange ulike fasiliteter fordelt på fem etasjer, blant annet en casino, tre forskjellige restauranter, diverse butikker, og til og med et basseng på terrassen på toppen.</p>
                 </div>
+
+                <br />
+
+                <div>
+                    <h3>Cruisetastic So-so</h3>
+                    <img src="img/skip/skip1.jpg" alt="Et mindre skip som vi ikke er stolt over." width="566" height="472" />
+                    <p>På <i>Cruisetastic So-so</i> </p>
+                </div>
+
                 <div>
                     <h3>Cruisetastic DreamRaft</h3>
                     <img src="img/skip/raft.jpg" alt="Rolig cruiseskip med mulighet for fisking." width="566" height="378" />
