--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -76,7 +76,7 @@
                     <br />
                     <small>Nyt 3 fantastiske uker fra kun <large>25 495,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseKaribia" aria-expanded="false" aria-controls="collapseExample">
-                        Les mere her.
+                        Trykk her for å finne ut mer om denne destinasjonen.
                     </a>
                 </h3>
 
@@ -115,7 +115,7 @@
                     <br />
                     <small>Nyt 2 fantastiske uker fra kun <large>13 995,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseDubai" aria-expanded="false" aria-controls="collapseExample">
-                        Les mere her.
+                        Trykk her for å finne ut mer om denne destinasjonen.
                     </a>
                 </h3>
 
@@ -147,7 +147,7 @@
                     <br />
                     <small>Nyt 4 fantastiske uker fra kun <large>35 795,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseMiddel" aria-expanded="false" aria-controls="collapseExample">
-                        Les mere her.
+                        Trykk her for å finne ut mer om denne destinasjonen.
                     </a>
                 </h3>
 
@@ -179,7 +179,7 @@
                     <br />
                     <small>Nyt 2 fantastiske uker fra kun <large>29 795,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseIndisk" aria-expanded="false" aria-controls="collapseExample">
-                        Les mere her.
+                        Trykk her for å finne ut mer om denne destinasjonen.
                     </a>
                 </h3>
 
