--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -76,7 +76,7 @@
                     <br />
                     <small>Nyt 3 fantastiske uker fra kun <large>25 495,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseKaribia" aria-expanded="false" aria-controls="collapseExample">
-                        Trykk her for å finne ut mer om denne destinasjonen.
+                        Les mer her.
                     </a>
                 </h3>
 
@@ -115,7 +115,7 @@
                     <br />
                     <small>Nyt 2 fantastiske uker fra kun <large>13 995,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseDubai" aria-expanded="false" aria-controls="collapseExample">
-                        Trykk her for å finne ut mer om denne destinasjonen.
+                        Les mer her.
                     </a>
                 </h3>
 
@@ -127,7 +127,7 @@
                                 Velg vårt cruise i Persiabukten og opplev omgivelser som hentet ut av "Tusen og én natt"!
                                 Vings cruise i Persiabukten tar deg til Dubai, Abu Dhabi, Muscat og Khasab,
                                 det ene reisemålet mer spektakulært enn det andre.
-                                Muscat, hovedstaden i sultanmakten Oman tilbyr et stort utvalg av severdigheter,
+                                Muscat, hovedstaden i sultanmakten Oman tilbyr et utvalg av severdigheter,
                                 strender og markeder, og Dubai er en herlig blanding av tradisjon og overdådig luksus.
                                 Her finnes innendørs skianlegg, tradisjonelle markeder, fantastiske hotell og verdens
                                 høyeste bygning, Burj Khalifa, blant mye, mye annet.
@@ -147,7 +147,7 @@
                     <br />
                     <small>Nyt 4 fantastiske uker fra kun <large>35 795,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseMiddel" aria-expanded="false" aria-controls="collapseExample">
-                        Trykk her for å finne ut mer om denne destinasjonen.
+                        Les mer her.
                     </a>
                 </h3>
 
@@ -179,7 +179,7 @@
                     <br />
                     <small>Nyt 2 fantastiske uker fra kun <large>29 795,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseIndisk" aria-expanded="false" aria-controls="collapseExample">
-                        Trykk her for å finne ut mer om denne destinasjonen.
+                        Les mer her.
                     </a>
                 </h3>
 
