--- a/WebProsjekt/WB Prosjekt/kontakt.html
+++ b/WebProsjekt/WB Prosjekt/kontakt.html
@@ -120,7 +120,7 @@
                 <ul class="list-group">
                     <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
                     <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Dubai</li>
-                    <li class="list-group-item">09/09/15 RMS Cruistanic fullførte nok et cruise!</li>
+                    <li class="list-group-item">09/09/15 RMS Cruisetanic fullførte nok et cruise!</li>
                     <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
                 </ul>
             </div>
