--- a/WebProsjekt/WB Prosjekt/skip.html
+++ b/WebProsjekt/WB Prosjekt/skip.html
@@ -112,9 +112,13 @@
 
                 <div>
                     <h3>RMS Cruisetanic</h3>
+                    <br />
                     <img src="img/skip/titanic.jpg" alt="Ikke Titanic lol" width="566" height="425" />
+                    <br />
+                    <br />
                     <p>Mange har hørt rykter om at cruiseskipet vårt <i>Cruisetanic</i> er forbannet, men vi kan garantere at dette er bare fanterier. I dag cruiser <i>Cruisetanic</i> stødigere enn noen sinne, og skipet viser ingen tegn til tiltrekkelse til isfjell.</p>
                 </div>
+                <br />
             </div>
 
             <div class="content-right col-md-4">
@@ -125,7 +129,7 @@
                 <ul class="list-group">
                     <li class="list-group-item">28/10/15 Nettsiden har blitt oppdatert</li>
                     <li class="list-group-item">10/10/15 Ny cruisedestinasjon: Dubai</li>
-                    <li class="list-group-item">09/09/15 RMS Cruistanic fullførte nok et cruise!</li>
+                    <li class="list-group-item">09/09/15 RMS Cruisetanic fullførte nok et cruise!</li>
                     <li class="list-group-item">02/09/15 Vi har blitt kåret som verdens beste cruiseorganisator</li>
                 </ul>
             </div>
