--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -13,26 +13,21 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" style="height: 75px;">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Cruisetastic</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="dest.html">Destinasjoner</a></li>
+                <a class="navbar-brand" href="index.html">
+                    <img alt="Cruisetastic" src="img/logo_hel_liten_ico.png" style="margin-top: -10px;">
+                </a>
+                <ul class="nav navbar-nav" style="margin-top: 15px; font-size: 1em;">
+                    <li><a href="#">Cruisetastic</a></li>
+                    <li><a href="dest.html">Destinasjoner</a></li>
                     <li><a href="kontakt.html">Kontakt</a></li>
                     <li><a href="reise.html">Bestill reise</a></li>
                     <li><a href="skip.html">Skip</a></li>
                     <li><a href="tilbud.html">Tilbud</a></li>
                 </ul>
-            </div><!--/.nav-collapse -->
+            </div>
         </div>
     </nav>
 
