--- a/WebProsjekt/WB Prosjekt/reise.html
+++ b/WebProsjekt/WB Prosjekt/reise.html
@@ -12,28 +12,21 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-fixed-top" style="height: 75px;">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html">Cruisetastic</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-            
+                    <a class="navbar-brand" href="index.html">
+                        <img alt="Cruisetastic" src="img/logo_hel_liten_ico.png" style="margin-top: -10px;">
+                    </a>
+                    <ul class="nav navbar-nav" style="margin-top: 15px; font-size: 1em;">
+                        <li><a href="#">Cruisetastic</a></li>
                         <li><a href="dest.html">Destinasjoner</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
-                        <li class="active"><a href="reise.html">Bestill reise</a></li>
+                        <li><a href="reise.html">Bestill reise</a></li>
                         <li><a href="skip.html">Skip</a></li>
                         <li><a href="tilbud.html">Tilbud</a></li>
                     </ul>
-            
-                </div><!--/.nav-collapse -->
+                </div>
             </div>
         </nav>
 
@@ -64,19 +57,29 @@
 
             <div class="fuckface">
                <div class="form">
-                   <link rel="stylesheet" href="form/formoid-metro-cyan.css" type="text/css" />
+                   <link rel="stylesheet" href="form/metro-cyan.css" type="text/css" />
                    <script type="text/javascript" src="form/jquery.min.js"></script>
                    <form class="formoid-metro-cyan" style="background-color:#FFFFFF;font-size:14px;font-family:'Open Sans','Helvetica Neue','Helvetica',Arial,Verdana,sans-serif;color:#666666;max-width:480px;min-width:150px" method="post">
                        <div class="title"><h2>Bestilling</h2></div>
-                       <div class="element-name"><label class="title">Navn<span class="required">*</span></label><span class="nameFirst"><input type="text" size="8" name="name[first]" required="required" /><label class="subtitle">Fornavn</label></span><span class="nameLast"><input type="text" size="14" name="name[last]" required="required" /><label class="subtitle">Etternavn</label></span></div>
-                       <div class="element-email"><label class="title">Email<span class="required">*</span></label><input class="large" type="email" name="email" value="" required="required" /></div>
-                       <div class="element-phone"><label class="title">Telefon<span class="required">*</span></label><input class="large" type="tel" pattern="[+]?[\.\s\-\(\)\*\#0-9]{3,}" maxlength="24" name="phone" required="required" value="" /></div>
-                       <div class="element-date"><label class="title">Fødselsdato<span class="required">*</span></label><input class="large" data-format="yyyy-mm-dd" type="date" name="date2" required="required" placeholder="yyyy-mm-dd" /></div>
+                       <div class="element-name"><label class="title">Navn<span class="required">*</span></label><span class="nameFirst"><input type="text" size="8" name="name[first]" required="required" /><label class="subtitle">Fornavn</label></span><span class="nameLast"><input type="text" size="14" name="name[last]" required="required" /><label class="subtitle">Etternavn</label></span>
+                       </div>
+                       <div class="element-email">
+                           <label class="title">Email<span class="required">*</span>
+                       </label>
+                       <input class="large" type="email" name="email" value="" required="required" /></div>
+                       <div class="element-phone">
+                           <label class="title">Telefon<span class="required">*</span>
+                       </label>
+                       <input class="large" type="tel" pattern="[+]?[\.\s\-\(\)\*\#0-9]{3,}" maxlength="24" name="phone" required="required" value="" />
+                       </div>
+                       <div class="element-date">
+                           <label class="title">Fødselsdato<span class="required">*</span></label>
+                           <input class="large" data-format="yyyy-mm-dd" type="date" name="date2" required="required" placeholder="yyyy-mm-dd" />
+                       </div>
                        <div class="element-select">
                            <label class="title">Destinasjon<span class="required">*</span></label><div class="large">
                                <span>
                                    <select name="select" required="required">
-
                                        <option value="Karibien">Karibien - 3 uker - 10.02.2016 til 02.03.2016</option>
                                        <option value="Middelhavet ">Middelhavet - 4 uker - 06.02.2016 til 27.02.2016 </option>
                                        <option value="Dubai">Dubai - 2 uker - 03.03.2016 til 17.03.206</option>
@@ -86,13 +89,13 @@
                            </div>
                        </div>
                        <div class="element-checkbox                                                                                                                                                                                                                                                                                                                                       ">
-                           <label class="title">Det lille ekstra<span class="required">* <small>pr dag</small></span></label>		<div class="column column2"><label><input type="checkbox" name="checkbox[]" value="All inclusive"/ required="required"><span>All inclusive - 300 kr</span></label><label><input type="checkbox" name="checkbox[]" value="Ekstra seng"/ required="required"><span>Ekstra seng - 100 kr</span></label></div><span class="clearfix"></span>
-                           <div class="column column2"><label><input type="checkbox" name="checkbox[]" value="Halvpensjon"/ required="required"><span>Halvpensjon - 150 kr</span></label><label><input type="checkbox" name="checkbox[]" value="Havutsikt"/ required="required"><span>Havutsikt - 50 kr</span></label></div><span class="clearfix"></span>
+                           <label class="title">Det lille ekstra<span class="required">* <small>pr dag</small></span></label>		<div class="column column2"><label><input type="checkbox" name="checkbox[]" value="All inclusive" required="required"><span>All inclusive - 300 kr</span></label><label><input type="checkbox" name="checkbox[]" value="Ekstra seng" required="required"><span>Ekstra seng - 100 kr</span></label></div><span class="clearfix"></span>
+                           <div class="column column2"><label><input type="checkbox" name="checkbox[]" value="Halvpensjon" required="required"><span>Halvpensjon - 150 kr</span></label><label><input type="checkbox" name="checkbox[]" value="Havutsikt" required="required"><span>Havutsikt - 50 kr</span></label></div><span class="clearfix"></span>
                        </div>
                        <div class="element-textarea"><label class="title">Kommentarer</label><textarea class="medium" name="textarea" cols="20" rows="5"></textarea></div>
                        <div class="submit"><input type="submit" value="Submit" /></div>
-                   </form><p class="frmd"><a href="http://formoid.com/v29.php">form builder</a> Formoid.com 2.9</p>
-                   <script type="text/javascript" src="form/formoid-metro-cyan.js"></script>
+                   </form>
+                   <script type="text/javascript" src="form/metro-cyan.js"></script>
                </div>
             </div>
             </div>
