--- a/WebProsjekt/WB Prosjekt/reise.html
+++ b/WebProsjekt/WB Prosjekt/reise.html
@@ -58,8 +58,8 @@
             <div class="fuckface">
                <div class="form">
                    <link rel="stylesheet" href="form/metro-cyan.css" type="text/css" />
-                   <script type="text/javascript" src="form/jquery.min.js"></script>
-                   <form class="formoid-metro-cyan" style="background-color:#FFFFFF;font-size:14px;font-family:'Open Sans','Helvetica Neue','Helvetica',Arial,Verdana,sans-serif;color:#666666;max-width:480px;min-width:150px" method="post">
+                   <!--<script type="text/javascript" src="form/jquery.min.js"></script>-->
+                   <form class="formoid-metro-cyan" action="http://www.iie.hist.no/fag/webutvikling1/prosjekt/behandle.php" style="background-color:#FFFFFF;font-size:14px;font-family:'Open Sans','Helvetica Neue','Helvetica',Arial,Verdana,sans-serif;color:#666666;max-width:480px;min-width:150px" method="post">
                        <div class="title"><h2>Bestilling</h2></div>
                        <div class="element-name"><label class="title">Navn<span class="required">*</span></label><span class="nameFirst"><input type="text" size="8" name="name[first]" required="required" /><label class="subtitle">Fornavn</label></span><span class="nameLast"><input type="text" size="14" name="name[last]" required="required" /><label class="subtitle">Etternavn</label></span>
                        </div>
@@ -72,6 +72,14 @@
                        </label>
                        <input class="large" type="tel" pattern="[+]?[\.\s\-\(\)\*\#0-9]{3,}" maxlength="24" name="phone" required="required" value="" />
                        </div>
+
+                       <div class="element-phone">
+                           <label class="title">
+                               Medlemsnummer<span class="required">*</span>
+                           </label>
+                           <input class="large" type="tel" pattern="[+]?[\.\s\-\(\)\*\#0-9]{3,}" maxlength="13" name="phone" required="required" value="" />
+                       </div>
+
                        <div class="element-date">
                            <label class="title">Fødselsdato<span class="required">*</span></label>
                            <input class="large" data-format="yyyy-mm-dd" type="date" name="date2" required="required" placeholder="yyyy-mm-dd" />
