--- a/WebProsjekt/WB Prosjekt/index.html
+++ b/WebProsjekt/WB Prosjekt/index.html
@@ -33,7 +33,7 @@
                         <img alt="Cruisetastic" src="img/logo_hel_liten_ico.png" style="margin-top: -10px;">
                     </a>
                     <ul class="nav navbar-nav" style="margin-top: 15px; font-size: 1em;">
-                        <li><a href="#">Cruisetastic</a></li>
+                        <li><a href="index.html">Cruisetastic</a></li>
                         <li><a href="dest.html">Destinasjoner</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
                         <li><a href="reise.html">Bestill reise</a></li>
