--- a/WebProsjekt/WB Prosjekt/kontakt.html
+++ b/WebProsjekt/WB Prosjekt/kontakt.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
-                            <img data-src="holder.js/100%x200" alt="100%x200" src="img/kaptein.jpg" data-holder-rendered="true" style="height: 240px; width: 75%; display: block;">
+                            <img data-src="holder.js/100%x200" alt="100%x200" src="img/kaptein.jpg" data-holder-rendered="true" style="height: 240px; width: 200px; display: block;">
                             <div class="caption">
                                 <h3>Kaptein Trond</h3>
                                 <p>Kaptein Trond til tjeneste!</p>
@@ -94,7 +94,7 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
-                            <img data-src="holder.js/100%x200" alt="100%x200" src="img/2styrman.jpg" data-holder-rendered="true" style="height: 240px; width: 75%; display: block;">
+                            <img data-src="holder.js/100%x200" alt="100%x200" src="img/2styrman.jpg" data-holder-rendered="true" style="height: 240px; width: 200px; display: block;">
                             <div class="caption">
                                 <h3>Andre Styrmann Eric</h3>
                                 <p>Ett bilde av vår andre styrmann, ved kaptein Trond sin side.</p>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
-                            <img data-src="holder.js/100%x200" alt="100%x200" src="img/sjefen.jpg" data-holder-rendered="true" style="height: 240px; width: 75%; display: block;">
+                            <img data-src="holder.js/100%x200" alt="100%x200" src="img/sjefen.jpg" data-holder-rendered="true" style="height: 240px; width: 200px; display: block;">
                             <div class="caption">
                                 <h3>Sjefen Voff</h3>
                                 <p>Ett bilde av vår kjære sjef Voff.</p>
