--- a/WebProsjekt/WB Prosjekt/supertilbud.html
+++ b/WebProsjekt/WB Prosjekt/supertilbud.html
@@ -57,7 +57,7 @@
 
         <div class="fuckface">
             <div class="form">
-                <link rel="stylesheet" href="form/formoid-metro-cyan.css" type="text/css" />
+                <link rel="stylesheet" href="form/metro-cyan.css" type="text/css" />
                 <script type="text/javascript" src="form/jquery.min.js"></script>
                 <form class="formoid-metro-cyan" style="background-color:#FFFFFF;font-size:14px;font-family:'Open Sans','Helvetica Neue','Helvetica',Arial,Verdana,sans-serif;color:#666666;max-width:480px;min-width:150px" method="post">
                     <div class="title"><h2>Bestilling</h2></div>
@@ -78,13 +78,13 @@
                         </div>
                     </div>
                     <div class="element-checkbox                                                                                                                                                                                                                                                                                                                                       ">
-                        <label class="title">Det lille ekstra<span class="required">* <small>pr dag</small></span></label>		<div class="column column2"><label><input type="checkbox" name="checkbox[]" value="All inclusive"/ required="required"><span>All inclusive - 300 kr</span></label><label><input type="checkbox" name="checkbox[]" value="Ekstra seng"/ required="required"><span>Ekstra seng - 100 kr</span></label></div><span class="clearfix"></span>
-                        <div class="column column2"><label><input type="checkbox" name="checkbox[]" value="Halvpensjon"/ required="required"><span>Halvpensjon - 150 kr</span></label><label><input type="checkbox" name="checkbox[]" value="Havutsikt"/ required="required"><span>Havutsikt - 50 kr</span></label></div><span class="clearfix"></span>
+                        <label class="title">Det lille ekstra<span class="required">* <small>pr dag</small></span></label>		<div class="column column2"><label><input type="checkbox" name="checkbox[]" value="All inclusive" required="required"><span>All inclusive - 300 kr</span></label><label><input type="checkbox" name="checkbox[]" value="Ekstra seng" required="required"><span>Ekstra seng - 100 kr</span></label></div><span class="clearfix"></span>
+                        <div class="column column2"><label><input type="checkbox" name="checkbox[]" value="Halvpensjon" required="required"><span>Halvpensjon - 150 kr</span></label><label><input type="checkbox" name="checkbox[]" value="Havutsikt" required="required"><span>Havutsikt - 50 kr</span></label></div><span class="clearfix"></span>
                     </div>
                     <div class="element-textarea"><label class="title">Kommentarer</label><textarea class="medium" name="textarea" cols="20" rows="5"></textarea></div>
                     <div class="submit"><input type="submit" value="Submit" /></div>
-                </form><p class="frmd"><a href="http://formoid.com/v29.php">form builder</a> Formoid.com 2.9</p>
-                <script type="text/javascript" src="form/formoid-metro-cyan.js"></script>
+                </form>
+                <script type="text/javascript" src="form/metro-cyan.js"></script>
             </div>
         </div>
     </div>
