--- a/WebProsjekt/WB Prosjekt/reise.html
+++ b/WebProsjekt/WB Prosjekt/reise.html
@@ -66,7 +66,7 @@
                        <div class="element-email">
                            <label class="title">Email<span class="required">*</span>
                        </label>
-                       <input class="large" type="email" name="email" value="" required="required" /></div>
+                       <input class="large" type="email" name="epost" value="" required="required" /></div>
                        <div class="element-phone">
                            <label class="title">Telefon<span class="required">*</span>
                        </label>
