--- a/WebProsjekt/WB Prosjekt/supertilbud.html
+++ b/WebProsjekt/WB Prosjekt/supertilbud.html
@@ -62,7 +62,7 @@
                 <form class="formoid-metro-cyan" action="http://www.iie.hist.no/fag/webutvikling1/prosjekt/behandle.php" style="background-color:#FFFFFF;font-size:14px;font-family:'Open Sans','Helvetica Neue','Helvetica',Arial,Verdana,sans-serif;color:#666666;max-width:480px;min-width:150px" method="post">
                     <div class="title"><h2>Bestilling</h2></div>
                     <div class="element-name"><label class="title">Navn<span class="required">*</span></label><span class="nameFirst"><input type="text" size="8" name="name[first]" required="required" /><label class="subtitle">Fornavn</label></span><span class="nameLast"><input type="text" size="14" name="name[last]" required="required" /><label class="subtitle">Etternavn</label></span></div>
-                    <div class="element-email"><label class="title">Email<span class="required">*</span></label><input class="large" type="email" name="email" value="" required="required" /></div>
+                    <div class="element-email"><label class="title">Email<span class="required">*</span></label><input class="large" type="email" name="epost" value="" required="required" /></div>
                     <div class="element-phone"><label class="title">Telefon<span class="required">*</span></label><input class="large" type="tel" pattern="[+]?[\.\s\-\(\)\*\#0-9]{3,}" maxlength="24" name="phone" required="required" value="" /></div>
                     <div class="element-date"><label class="title">Fødselsdato<span class="required">*</span></label><input class="large" data-format="yyyy-mm-dd" type="date" name="date2" required="required" placeholder="yyyy-mm-dd" /></div>
                   
