--- a/WebProsjekt/WB Prosjekt/kontakt.html
+++ b/WebProsjekt/WB Prosjekt/kontakt.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.0/holder.js"></script>
     </head>
     <body>
 
@@ -85,7 +86,8 @@
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
-                            <img  src="img/kaptein.jpg" data-holder-rendered="true" style="height: 240px; width: 200px; display: block;">
+                            <img src="img/kaptein.jpg" class="img-rounded"/>
+                            <!--<img data-src="holder.js/200x200" src="img/kaptein.jpg" data-holder-rendered="true">-->
                             <div class="caption">
                                 <h3>Kaptein Trond</h3>
                                 <p>Kaptein Trond til tjeneste!</p>
@@ -94,7 +96,8 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
-                            <img  src="img/2styrman.jpg" data-holder-rendered="true" style="height: 240px; width: 200px; display: block;">
+                            <img src="img/2styrman.jpg" class="img-rounded" />
+                            <!--<img data-src="holder.js/200x200" src="img/2styrman.jpg" data-holder-rendered="true">-->
                             <div class="caption">
                                 <h3>Andre Styrmann Eric</h3>
                                 <p>Ett bilde av vår andre styrmann, ved kaptein Trond sin side.</p>
@@ -103,7 +106,8 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="thumbnail">
-                            <img  src="img/sjefen.jpg" data-holder-rendered="true" style="height: 240px; width: 200px; display: block;">
+                            <img src="img/sjefen.jpg" class="img-rounded" />
+                            <!--<img data-src="holder.js/200x200" src="img/sjefen.jpg" data-holder-rendered="true">-->
                             <div class="caption">
                                 <h3>Sjefen Voff</h3>
                                 <p>Ett bilde av vår kjære sjef Voff.</p>
